@@ -19,9 +19,9 @@ public final class RoadBlockTool {
 
 	private final static NamespacedKey PERSISTENT_KEY = new NamespacedKey(plugin, "isTool");
 
-	public final static Set<Material> toolTransparentMaterials = Set.of(
+	public final static Set<Material> toolTransparentMaterials = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
 			Material.AIR, Material.CAVE_AIR, Material.VOID_AIR, Material.SNOW,
-			Material.GRASS, Material.TALL_GRASS, Material.VINE );
+			Material.GRASS, Material.TALL_GRASS, Material.VINE )));
 
 
 	/**
